# aas-core3.0-python-protobuf

./: .readthedocs.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish-to-pypi.yml
aas_core3_protobuf/: __init__.py
continuous_integration/: check_version_consistent.py  precommit.py
dev_scripts/: generate_pbization.py  run_protoc.py  update_proto_definition.py
dev_scripts/proto/: types.proto
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  contributing.rst  introduction.rst
docs/source/api/: index.rst  pbization.rst  types_pb2.rst
docs/source/getting_started/: from_protobuf.rst  index.rst  install.rst  to_protobuf.rst
